test/classes/deitz/test_infer_nil.good
test_infer_nil.chpl:8: warning: object
test_infer_nil.chpl:9: error: unresolved call 'object.x'
test_infer_nil.chpl:2: note: candidates are: C.x
